{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 94,
  "lineage": "e037e39a-a58f-69ac-500c-fcd288098540",
  "resources": [
    {
      "module": "module.dev-infra",
      "mode": "managed",
      "type": "aws_instance",
      "name": "rk-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02b297871a94f4b42",
            "arn": "arn:aws:ec2:us-west-2:339712816145:instance/i-06490161c5e82184c",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06490161c5e82184c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dev-terraform-rk-key-ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-076643bc348400063"
              }
            ],
            "primary_network_interface_id": "eni-076643bc348400063",
            "private_dns": "ip-10-0-1-145.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.145",
            "public_ip": "54.218.52.208",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f6a30745ce331b03",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-016b401581302a012",
            "tags": {
              "Name": "dev-ec2"
            },
            "tags_all": {
              "Name": "dev-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0faeeb85fb66450dc"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339712816145",
            "id": "i-06490161c5e82184c",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.dev-infra.aws_key_pair.rk-key",
            "module.dev-infra.aws_security_group.rk-sg",
            "module.dev-infra.aws_subnet.rk-subnet",
            "module.dev-infra.aws_vpc.rk-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev-infra",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "rk-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:339712816145:internet-gateway/igw-07404f17207d86efb",
            "id": "igw-07404f17207d86efb",
            "owner_id": "339712816145",
            "region": "us-west-2",
            "tags": {
              "Name": "dev-rk-igw"
            },
            "tags_all": {
              "Name": "dev-rk-igw"
            },
            "vpc_id": "vpc-062cf78bb6147f9e3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dev-infra.aws_vpc.rk-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev-infra",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-rk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:339712816145:route-table/rtb-0e9eedda8d130ce61",
            "id": "rtb-0e9eedda8d130ce61",
            "owner_id": "339712816145",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07404f17207d86efb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-062cf78bb6147f9e3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339712816145",
            "id": "rtb-0e9eedda8d130ce61",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.dev-infra.aws_internet_gateway.rk-igw",
            "module.dev-infra.aws_vpc.rk-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev-infra",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d00e04a2370c8b54",
            "region": "us-west-2",
            "route_table_id": "rtb-0e9eedda8d130ce61",
            "subnet_id": "subnet-016b401581302a012"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dev-infra.aws_internet_gateway.rk-igw",
            "module.dev-infra.aws_route_table.rt-rk",
            "module.dev-infra.aws_subnet.rk-subnet",
            "module.dev-infra.aws_vpc.rk-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev-infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rk-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:339712816145:security-group/sg-0faeeb85fb66450dc",
            "description": "tf generated sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0faeeb85fb66450dc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-automate-sg",
            "name_prefix": "",
            "owner_id": "339712816145",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-automate-sg"
            },
            "tags_all": {
              "Name": "dev-automate-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-062cf78bb6147f9e3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339712816145",
            "id": "sg-0faeeb85fb66450dc",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.dev-infra.aws_vpc.rk-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev-infra",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rk-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:339712816145:subnet/subnet-016b401581302a012",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016b401581302a012",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339712816145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "dev-rk-subnet"
            },
            "tags_all": {
              "Name": "dev-rk-subnet"
            },
            "vpc_id": "vpc-062cf78bb6147f9e3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339712816145",
            "id": "subnet-016b401581302a012",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.dev-infra.aws_vpc.rk-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev-infra",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "rk-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:339712816145:vpc/vpc-062cf78bb6147f9e3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09de95ea91050b436",
            "default_route_table_id": "rtb-0ddcba6b40caaeaf1",
            "default_security_group_id": "sg-04ce7508aa1965986",
            "dhcp_options_id": "dopt-0a1e3da5e622cb1be",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-062cf78bb6147f9e3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ddcba6b40caaeaf1",
            "owner_id": "339712816145",
            "region": "us-west-2",
            "tags": {
              "Name": "dev-rk-vpc"
            },
            "tags_all": {
              "Name": "dev-rk-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339712816145",
            "id": "vpc-062cf78bb6147f9e3",
            "region": "us-west-2"
          }
        }
      ]
    },
    {
      "module": "module.prd-infra",
      "mode": "managed",
      "type": "aws_instance",
      "name": "rk-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02b297871a94f4b42",
            "arn": "arn:aws:ec2:us-west-2:339712816145:instance/i-04aabe3a837eb7ef5",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04aabe3a837eb7ef5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "prd-terraform-rk-key-ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0aeec013612ec5d0e"
              }
            ],
            "primary_network_interface_id": "eni-0aeec013612ec5d0e",
            "private_dns": "ip-10-0-1-4.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.4",
            "public_ip": "35.89.49.85",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-085d277da7473a7bf",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ee3dc3515b316ab6",
            "tags": {
              "Name": "prd-ec2"
            },
            "tags_all": {
              "Name": "prd-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-043740916eb52a768"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339712816145",
            "id": "i-04aabe3a837eb7ef5",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.prd-infra.aws_key_pair.rk-key",
            "module.prd-infra.aws_security_group.rk-sg",
            "module.prd-infra.aws_subnet.rk-subnet",
            "module.prd-infra.aws_vpc.rk-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prd-infra",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "rk-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:339712816145:internet-gateway/igw-06f6cea53f45f55a6",
            "id": "igw-06f6cea53f45f55a6",
            "owner_id": "339712816145",
            "region": "us-west-2",
            "tags": {
              "Name": "prd-rk-igw"
            },
            "tags_all": {
              "Name": "prd-rk-igw"
            },
            "vpc_id": "vpc-0a8fbec8db68095d7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.prd-infra.aws_vpc.rk-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prd-infra",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-rk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:339712816145:route-table/rtb-0a46336f0bbb54f7b",
            "id": "rtb-0a46336f0bbb54f7b",
            "owner_id": "339712816145",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06f6cea53f45f55a6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a8fbec8db68095d7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339712816145",
            "id": "rtb-0a46336f0bbb54f7b",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.prd-infra.aws_internet_gateway.rk-igw",
            "module.prd-infra.aws_vpc.rk-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prd-infra",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00dcc1fa6cd38a204",
            "region": "us-west-2",
            "route_table_id": "rtb-0a46336f0bbb54f7b",
            "subnet_id": "subnet-0ee3dc3515b316ab6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.prd-infra.aws_internet_gateway.rk-igw",
            "module.prd-infra.aws_route_table.rt-rk",
            "module.prd-infra.aws_subnet.rk-subnet",
            "module.prd-infra.aws_vpc.rk-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prd-infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rk-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:339712816145:security-group/sg-043740916eb52a768",
            "description": "tf generated sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-043740916eb52a768",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "prd-automate-sg",
            "name_prefix": "",
            "owner_id": "339712816145",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prd-automate-sg"
            },
            "tags_all": {
              "Name": "prd-automate-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8fbec8db68095d7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339712816145",
            "id": "sg-043740916eb52a768",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.prd-infra.aws_vpc.rk-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prd-infra",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rk-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:339712816145:subnet/subnet-0ee3dc3515b316ab6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee3dc3515b316ab6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339712816145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "prd-rk-subnet"
            },
            "tags_all": {
              "Name": "prd-rk-subnet"
            },
            "vpc_id": "vpc-0a8fbec8db68095d7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339712816145",
            "id": "subnet-0ee3dc3515b316ab6",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.prd-infra.aws_vpc.rk-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prd-infra",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "rk-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:339712816145:vpc/vpc-0a8fbec8db68095d7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-023172a053b4076bc",
            "default_route_table_id": "rtb-0a88ca1cb1a3d6c2c",
            "default_security_group_id": "sg-0fea4fc4af78885d3",
            "dhcp_options_id": "dopt-0a1e3da5e622cb1be",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a8fbec8db68095d7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a88ca1cb1a3d6c2c",
            "owner_id": "339712816145",
            "region": "us-west-2",
            "tags": {
              "Name": "prd-rk-vpc"
            },
            "tags_all": {
              "Name": "prd-rk-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339712816145",
            "id": "vpc-0a8fbec8db68095d7",
            "region": "us-west-2"
          }
        }
      ]
    },
    {
      "module": "module.stg-infra",
      "mode": "managed",
      "type": "aws_instance",
      "name": "rk-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02b297871a94f4b42",
            "arn": "arn:aws:ec2:us-west-2:339712816145:instance/i-027111fecf8457418",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-027111fecf8457418",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "stg-terraform-rk-key-ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0bee7e33adc0e2e45"
              }
            ],
            "primary_network_interface_id": "eni-0bee7e33adc0e2e45",
            "private_dns": "ip-10-0-1-147.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.147",
            "public_ip": "54.213.87.152",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-082fc6a091b9c3bbf",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0326ad83b43729cdb",
            "tags": {
              "Name": "stg-ec2"
            },
            "tags_all": {
              "Name": "stg-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b0d2d0502939eac2"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339712816145",
            "id": "i-027111fecf8457418",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.stg-infra.aws_key_pair.rk-key",
            "module.stg-infra.aws_security_group.rk-sg",
            "module.stg-infra.aws_subnet.rk-subnet",
            "module.stg-infra.aws_vpc.rk-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stg-infra",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "rk-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:339712816145:internet-gateway/igw-0213c475af1ffa015",
            "id": "igw-0213c475af1ffa015",
            "owner_id": "339712816145",
            "region": "us-west-2",
            "tags": {
              "Name": "stg-rk-igw"
            },
            "tags_all": {
              "Name": "stg-rk-igw"
            },
            "vpc_id": "vpc-0790fb9edd901cc5d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.stg-infra.aws_vpc.rk-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stg-infra",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-rk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:339712816145:route-table/rtb-08b9e2cc7d62dc8e2",
            "id": "rtb-08b9e2cc7d62dc8e2",
            "owner_id": "339712816145",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0213c475af1ffa015",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0790fb9edd901cc5d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339712816145",
            "id": "rtb-08b9e2cc7d62dc8e2",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.stg-infra.aws_internet_gateway.rk-igw",
            "module.stg-infra.aws_vpc.rk-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stg-infra",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019e353d8459ff6f4",
            "region": "us-west-2",
            "route_table_id": "rtb-08b9e2cc7d62dc8e2",
            "subnet_id": "subnet-0326ad83b43729cdb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.stg-infra.aws_internet_gateway.rk-igw",
            "module.stg-infra.aws_route_table.rt-rk",
            "module.stg-infra.aws_subnet.rk-subnet",
            "module.stg-infra.aws_vpc.rk-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stg-infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rk-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:339712816145:security-group/sg-0b0d2d0502939eac2",
            "description": "tf generated sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b0d2d0502939eac2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "stg-automate-sg",
            "name_prefix": "",
            "owner_id": "339712816145",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stg-automate-sg"
            },
            "tags_all": {
              "Name": "stg-automate-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0790fb9edd901cc5d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339712816145",
            "id": "sg-0b0d2d0502939eac2",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.stg-infra.aws_vpc.rk-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stg-infra",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rk-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:339712816145:subnet/subnet-0326ad83b43729cdb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0326ad83b43729cdb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339712816145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "stg-rk-subnet"
            },
            "tags_all": {
              "Name": "stg-rk-subnet"
            },
            "vpc_id": "vpc-0790fb9edd901cc5d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339712816145",
            "id": "subnet-0326ad83b43729cdb",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.stg-infra.aws_vpc.rk-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stg-infra",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "rk-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:339712816145:vpc/vpc-0790fb9edd901cc5d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04acdd97726231b41",
            "default_route_table_id": "rtb-0382ff43c7734b251",
            "default_security_group_id": "sg-0eba50f686ed14c41",
            "dhcp_options_id": "dopt-0a1e3da5e622cb1be",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0790fb9edd901cc5d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0382ff43c7734b251",
            "owner_id": "339712816145",
            "region": "us-west-2",
            "tags": {
              "Name": "stg-rk-vpc"
            },
            "tags_all": {
              "Name": "stg-rk-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339712816145",
            "id": "vpc-0790fb9edd901cc5d",
            "region": "us-west-2"
          }
        }
      ]
    }
  ]
}